# assimpjs

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
assimpjs/src/: assimpjs.cpp
examples/: browser_download_test.html  browser_dragdrop_download_glb_test.html  browser_dragdrop_test.html  node_local_delay_load_test.js  node_local_load_test.js
test/: test.js
tools/: build_wasm_deb.sh  build_wasm_win.bat  build_wasm_win_dist.bat  build_wasm_win_release.bat
